#143 - Update part 2 step 17 to latest requirements